--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.wrap {
+    width: 70%;
+    margin: 5rem auto;
+    height: 100%;
+}
+.mat-row {
+    height: auto;
+  }
+  
+  .mat-cell {
+    margin: 2rem!important;
+    width: 160px;
+    text-align: left;
+  }
